Changes for 1.8.2

 - [ZBX-2053] fixed evaluating of case sensitivity on the server/agent side of regular expressions (Dmitry)
 - [ZBX-2077] added support of Failure/Success Audit eventlog severity (Sasha)
 - [ZBXNEXT-257] added support of time-based disabling of data collection for items (asaveljevs,Aly,Sasha)
 - [ZBX-2051] fixed memory leak in processing of calculated items (Alexei)
 - [ZBX-886] removed duplicate and outdated strings from locales (Richlv)
 - [ZBX-1790] restored support of the hyphen (-) in item key names (Sasha)
 - [ZBX-1962] explicit 'not monitored' response for active agents on disabled hosts (asaveljevs)
 - [ZBX-1522] fixed server crash on an undefined user macro (asaveljevs)
 - [ZBX-2039] fixed pattern matching in function count (asaveljevs)
 - [ZBXNEXT-119] added support for time shifted functions (asaveljevs)
 - [ZBX-2062] fixed sending of recovery messages multiple times (Sasha)
 - [ZBX-1878] reverted map label background drawing (Aly)
 - [ZBX-2016] fixed code with "_itow_s()" and "zbx_wsnprintf" to avoid possible run-time memory corruption. Thanks to Takanori Suzuki. (Dmitry)
 - [ZBX-2059] fixed special char treatment in XML export (Aly)
 - [ZBX-1655] improved error message on map saving with circular reference (Aly)
 - [ZBX-1823] improved map element labels expansion in map editing screen (Aly)
 - [ZBX-1991] added sequences for autoincrement fields to oracle.sql (Sasha)
 - [ZBX-2045] fixed trigger editor not preserving element ordering (Vedmak)
 - [ZBX-2003] fixed evaluation of division and subtraction (asaveljevs)
 - [ZBX-2029] fixed monitoring triggers showing triggers with true dependencies (Vedmak)
 - [ZBX-1902] fixed error when creating dependency for a trigger that belongs to the same template (Vedmak)
 - [ZBX-1705] fixed various front-end problems with Oracle database (Alexei)
 - [ZBX-1299] added check for the minimal (1.0.0) libssh2 library version (Dmitry)
 - [ZBX-1975] fixed permission check in graphs with web ites (Aly)